--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
   <!-- <link rel="icon" type="image/png" href="/images/favicon.png" /> -->
-  <link rel="stylesheet" type="text/" href="dist/styles.css" />
+  <link rel="stylesheet" type="text/" href="styles.css" />
 </head>
 
 <body>
     <div id="app"></div>
-  <script src="dist/bundle.js" type="text/javascript"></script>
+  <script src="bundle.js" type="text/javascript"></script>
 <!-- HELLO -->
 </body>
 
