--- a/public/sugatachat.html
+++ b/public/sugatachat.html
@@ -12,7 +12,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
   <!-- <link rel="icon" type="image/png" href="/images/favicon.png" /> -->
-  <link rel="stylesheet" type="text/" href="styles.css" />
+  <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
 <body>
